--- a/cortex.yaml
+++ b/cortex.yaml
@@ -4,6 +4,9 @@ info:
   x-cortex-git:
     github:
       repository: TaviscaSolutions/DR4
+  x-cortex-k8s:
+    deployment:
+    - identifier: dr4-deployment
   x-cortex-tag: dr4
   x-cortex-type: service
   x-cortex-owners:
